--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "twin.macro": "^2.8.2"
-    
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
@@ -32,7 +33,8 @@
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vitest": "^0.7.7"
   },
   "babelMacros": {
     "twin": {
