--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.6.20",
+    "formik": "^2.2.9",
+    "notiflix": "^3.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -17,7 +19,8 @@
     "react-router-dom": "^6.2.2",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
-    "twin.macro": "^2.8.2"
+    "twin.macro": "^2.8.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
