--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "postcss": "^8.4.7",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.8.0",
-    "vitest": "^0.7.7"
+    "vite": "^2.8.0"
   },
   "babelMacros": {
     "twin": {
